minor css fix on mobile

--- a/ulicms/admin/css/modern.css
+++ b/ulicms/admin/css/modern.css
@@ -12,7 +12,7 @@
 	margin-left: 5px;
 }
 .toggle-module-form .btn{
-    min-width:55px;
+    min-width:58px;
 }
 
 .inline-block {
